--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@toast-ui/vue-image-editor": "^1.3.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dom-to-image-more": "^2.8.0",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-rc.2"
   },
